infra/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: yas-dev
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: kafka
          image: docker.io/confluentinc/cp-kafka:7.7.1
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: yas-dev
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
      name: plaintext
