infra/api-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-istio-gateway
  namespace: yas-dev
spec:
  ports:
    - name: http
      port: 80
      targetPort: 32621
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: api-istio-gateway
  namespace: yas-dev
  labels:
    kubernetes.io/service-name: api-istio-gateway
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 32621
endpoints:
  - addresses:
      - 100.96.101.91
    conditions:
      ready: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-dev-api
  namespace: yas-dev
spec:
  ingressClassName: traefik
  rules:
    - host: api.yas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-istio-gateway
                port:
                  number: 80
